# organised-gym-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  apprunner.yaml  docker-compose.yaml  main.py  organised_gym_service_account.json  pyproject.toml  requirements.txt
.github/workflows/: Deployment.yaml
alembic/: env.py
alembic/versions/: 0c4e9439c566_add_focus_to_attendance.py  1fad4f00e753_add_gym_rules_table.py  201ec2fcbbc9_add_bank_accounts_table.py  215182e47602_add_app_version_and_platform_to_users.py  21e6d6389d87_rename_bonus_duration_and_discounted_.py  22290ff7109a_add_plan_id_to_users.py  56035a2d5bca_add_bonus_duration_and_discounted_plan_.py  66ff8972076_drop_notifications_table.py  8acf2823c0bb_add_social_media_and_contact_fields_to_.py  92ec0eb4af63_add_password_reset_tokens_table.py  9e2a0695b941_add_gym_code_to_gyms.py  a1b2c3d4e5f6_add_app_info_table.py  a1b2c3d4e5f7_add_password_reset_tokens_table.py  b2c3d4e5f6a7_add_qr_code_url_to_bank_accounts.py  c3939bca9fa1_add_gym_id_to_bank_accounts.py  f1ca921815ad_merge_multiple_heads_before_.py  g2d4e5f6a7b8_make_announcements_gym_id_nullable.py
app/core/: config.py  dependencies.py  exceptions.py  permission_guard.py  permissions.py  security.py
app/db/: db.py
app/models/: announcement.py  app_info.py  attendance.py  bank_account.py  billing.py  gym.py  gym_rule.py  gym_subscription.py  membership.py  notification.py  og_plan.py  password_reset_token.py  permission.py  plan.py  role.py  role_permission.py  user.py
app/schemas/: announcement.py  app_info.py  attendance.py  auth.py  bank_account.py  billing.py  gym.py  (+11 more)
(+65 files in other folders)
