[project]
name = "organised-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "psycopg2-binary>=2.9.0",
    "commitizen>=4.11.0",
    "alembic>=1.17.2",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "requests>=2.31.0",
    "cloudinary>=1.44.1",
    "resend>=2.21.0",
    "boto>=2.49.0",
    "boto3>=1.42.36",
]
